feat(irs):[#249] shorten to list in stream in policy controller